force-app/main/default/objects/Integration_Log_Transaction__c/Integration_Log_Transaction__c.object-meta.xml
<CustomObject>
    <label>Integration Log Transaction</label>
    <nameField>
        <displayFormat>IL-{0000}</displayFormat>
        <label>Integration Log Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Log Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>