force-app/main/default/objects/Integration_Log_Transaction__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-Time Passcode</fullName>
            </value>
            <value>
                <fullName>Reset 2FA</fullName>
            </value>
            <value>
                <fullName>Account Refresh</fullName>
            </value>
            <value>
                <fullName>Communication Log Retrieve</fullName>
            </value>
            <value>
                <fullName>Communication Log Create</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>