force-app/main/default/objects/Integration_Log_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Name__c</columns>
    <columns>Event_Id__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Duration__c</columns>
    <columns>Timestamp__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>